# codeXray

./: .eslintrc.cjs  .gitignore  .vscodeignore  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  package.yml  release.yml
doc/: ANSWERS_TO_10_QUESTIONS.md  API_REFERENCE.md  AntV_G6_v5_API_Reference.md  IMPLEMENTATION_CHECKLIST.md  README.md  README_API_DOCS.md  RESEARCH_REPORT.md  RESEARCH_SUMMARY.md  占位功能记录.md  操作手册.md
doc/00-主仓库/: UI元素记录.md  主仓库详细功能与架构设计.md  命令与视图清单.md  扩展架构与集成.md
doc/01-解析引擎/: 性能优化.md  接口约定.md  数据库设计.md  查询为空诊断.md  模块功能说明.md  解析功能实现说明.md  解析引擎与前端集成说明.md  解析引擎详细功能与架构设计.md
doc/02-可视化界面/: UI与交互逻辑.md  UI元素清单.md  可视化界面详细功能与架构设计.md  图可视化模块设计.md  模块功能说明.md
doc/03-Agent模块/: Agent模块详细功能与架构设计.md  接口与协议.md  模块功能说明.md  知识库树状结构与节点设计.md  记忆管理策略.md
doc/04-系统设计/: 系统框架与数据流.md
docs/superpowers/plans/: 2026-03-15-github-ci-release.md
docs/superpowers/specs/: 2026-03-15-github-ci-release-design.md
parser/: .gitignore  CMakeLists.txt
parser/proto/: cfg.proto  ipc.proto
parser/src/: main.cc
parser/src/ast/call_graph/: action.cc  action.h
parser/src/ast/class_relation/: action.cc  action.h
parser/src/ast/combined/: action.cc  action.h
parser/src/ast/control_flow/: action.cc  action.h
parser/src/ast/data_flow/: action.cc  action.h
parser/src/ast/function_pointer/: analyzer.cc  analyzer.h
parser/src/cli/: parse_args.cc  parse_args.h
parser/src/common/: analysis_output.h  clang_include_detector.cc  clang_include_detector.h  error_code.cc  error_code.h  logger.cc  logger.h  path_util.cc  path_util.h
parser/src/compile_commands/: load.cc  load.h
parser/src/db/: connection.cc  connection.h  schema.cc  schema.h
parser/src/db/reader/: reader.cc  reader.h
parser/src/db/writer/: writer.cc  writer.h
parser/src/driver/: orchestrator.cc  orchestrator.h
parser/src/history/: history.cc  history.h
parser/src/incremental/: incremental.cc  incremental.h
parser/src/query/: json_output.cc  json_output.h  query_options.h
parser/src/scheduler/: ipc_proto.cc  ipc_proto.h  pool.cc  pool.h
resources/ui/: dev.html  graph.html  index.html  package-lock.json  package.json  sidebar.html  tsconfig.json  vite.config.ts
resources/ui/scripts/: copy-codicons.cjs
resources/ui/src/: dev.ts  main.ts  types.ts
resources/ui/src/graph/: context-menu.ts  interactions.ts  layout-worker-bridge.ts  layout-worker.ts  layout.ts  path-highlight.ts  port-manager.ts  renderer.ts  toolbar.ts  virtual-viewport.ts
resources/ui/src/shared/: icons.ts  protocol.ts  types.ts  vscodeApi.d.ts  vscodeApi.ts
resources/ui/src/sidebar/: ChatTab.tsx  ParseTab.tsx  SidebarContainer.tsx  sidebar.css  sidebar.tsx
resources/ui/src/utils/: perf.ts  theme.ts
resources/ui/src/visualization/: CustomNode.tsx  G6Graph.tsx  GraphApp.tsx  GraphContextMenu.tsx  GraphCore.tsx  GraphNode.tsx  GraphPage.tsx  dagreLayout.ts  dataAdapter.ts  g6.css  g6Adapter.ts  g6Config.ts  g6Layout.ts  graph.css  graph.tsx  graphEntry.tsx  graphLayout.ts  graphMerge.ts  useGraphCollapse.ts  useGraphHistory.ts
resources/ui/src/visualization/adapters/: callGraph.ts  classGraph.ts  controlFlow.ts  dataFlow.ts  types.ts
src/: config.ts  extension.ts  logger.ts  statusBar.ts  types.ts
src/editor/: currentSymbol.ts  editorIntegration.ts  gotoSymbol.ts
src/services/: agentService.ts  parserService.ts
src/views/: chatTab.ts  parseManageTab.ts  sidebarView.ts  visualizationProvider.ts
